#!/bin/sh

TEMP=`getopt -o '' --long 'since:,in:' -- "$@"`
eval set -- "$TEMP"
while true
do
  case "$1" in
    --since)
      since=$2
      shift 2 ;;
    --in)
      in=$2
      shift 2 ;;
    --)
      shift
      break ;;
  esac
done

if [ "$in" != "" ]
  then # set positional parameters to lines from the file named $in
    OLD_IFS='';
    IFS='
'
    set -- $(cat "$in")
    IFS=$OLD_IFS
fi

if [ -e $since ]
  then
    changed=`find "$@" -newer $since`
    [ "$changed" != "" ]
  else
    true
fi